--- a/configs/apiserver.toml
+++ b/configs/apiserver.toml
@@ -1,3 +1,4 @@
 bind_addr = ":8080"
 log_level = "debug"
 database_url = "host=localhost dbname=restapi_dev password=root"
+session_key = "really_good_secret_key"
